bootstrap/interpreter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BYTE_ARRAY_LEFT_BRACKET
    DICTIONARY_ARRAY_LEFT_CURLY_BRACKET

Grammar

Rule 0     S' -> expressionList
Rule 1     expressionList -> optionalExpression
Rule 2     expressionList -> expressionList DOT optionalExpression
Rule 3     optionalExpression -> <empty>
Rule 4     optionalExpression -> expression
Rule 5     primaryTerm -> IDENTIFIER
Rule 6     primaryTerm -> literal
Rule 7     primaryTerm -> block
Rule 8     primaryTerm -> LEFT_PARENT RIGHT_PARENT
Rule 9     primaryTerm -> LEFT_PARENT expression RIGHT_PARENT
Rule 10    primaryExpression -> primaryTerm
Rule 11    primaryExpression -> QUOTE primaryTerm
Rule 12    primaryExpression -> QUASI_QUOTE primaryTerm
Rule 13    primaryExpression -> QUASI_UNQUOTE primaryTerm
Rule 14    primaryExpression -> SPLICE primaryTerm
Rule 15    primaryExpression -> primaryExpression LEFT_PARENT expressionList RIGHT_PARENT
Rule 16    primaryExpression -> primaryExpression LEFT_BRACKET expressionList RIGHT_BRACKET
Rule 17    primaryExpression -> primaryExpression block
Rule 18    blockClosureHeader -> blockArguments blockResultType BAR
Rule 19    optionalBlockClosureHeader -> blockClosureHeader
Rule 20    optionalBlockClosureHeader -> <empty>
Rule 21    pragmaList -> <empty>
Rule 22    pragmaList -> pragmaList pragma
Rule 23    pragma -> LESS_THAN expandableIdentifier GREATER_THAN
Rule 24    pragma -> LESS_THAN pragmaKeywordArguments GREATER_THAN
Rule 25    pragmaKeywordArgument -> KEYWORD primaryExpression
Rule 26    pragmaKeywordArguments -> pragmaKeywordArgument
Rule 27    pragmaKeywordArguments -> pragmaKeywordArguments pragmaKeywordArgument
Rule 28    block -> LEFT_CURLY_BRACKET optionalBlockClosureHeader pragmaList expressionList RIGHT_CURLY_BRACKET
Rule 29    blockArguments -> <empty>
Rule 30    blockArguments -> blockArguments blockArgument
Rule 31    optionalBlockArgumentType -> <empty>
Rule 32    optionalBlockArgumentType -> LEFT_PARENT expression RIGHT_PARENT
Rule 33    blockArgument -> COLON optionalBlockArgumentType expandableIdentifier
Rule 34    blockResultType -> <empty>
Rule 35    blockResultType -> COLON_COLON primaryExpression
Rule 36    expandableIdentifier -> IDENTIFIER
Rule 37    expandableIdentifier -> QUASI_UNQUOTE primaryTerm
Rule 38    prefixUnaryExpression -> primaryExpression
Rule 39    prefixUnaryExpression -> anyPrefixOperator prefixUnaryExpression
Rule 40    binaryExpression -> prefixUnaryExpression
Rule 41    binaryExpression -> binaryExpression anyOperator prefixUnaryExpression
Rule 42    chainedMessageArgument -> KEYWORD binaryExpression
Rule 43    chainedMessageArguments -> chainedMessageArgument
Rule 44    chainedMessageArguments -> chainedMessageArguments chainedMessageArgument
Rule 45    chainedMessage -> chainedMessageArguments
Rule 46    chainedMessages -> chainedMessage
Rule 47    chainedMessages -> chainedMessages SEMICOLON chainedMessage
Rule 48    optionalChainedMessages -> <empty>
Rule 49    optionalChainedMessages -> chainedMessages
Rule 50    chainExpression -> binaryExpression optionalChainedMessages
Rule 51    chainExpression -> chainedMessages
Rule 52    lowPrecedenceExpression -> chainExpression
Rule 53    lowPrecedenceExpression -> lowPrecedenceExpression lowPrecedenceOperator chainExpression
Rule 54    lowPrecedenceOperator -> COLON_COLON anyOperator
Rule 55    assignmentExpression -> lowPrecedenceExpression
Rule 56    assignmentExpression -> lowPrecedenceExpression ASSIGNMENT assignmentExpression
Rule 57    commaExpressionContent -> assignmentExpression
Rule 58    commaExpressionContent -> commaExpressionContent COMMA assignmentExpression
Rule 59    commaExpression -> commaExpressionContent
Rule 60    commaExpression -> commaExpressionContent COMMA
Rule 61    expression -> commaExpression
Rule 62    literal -> FLOAT
Rule 63    literal -> INTEGER
Rule 64    literal -> CHARACTER
Rule 65    literal -> STRING
Rule 66    literal -> SYMBOL_IDENTIFIER
Rule 67    literal -> SYMBOL_KEYWORD
Rule 68    literal -> SYMBOL_OPERATOR
Rule 69    literal -> SYMBOL_STRING
Rule 70    literal -> LITERAL_ARRAY_LEFT_PARENT literalArrayElements RIGHT_PARENT
Rule 71    literalArrayElements -> <empty>
Rule 72    literalArrayElements -> literalArrayElements literalArrayElement
Rule 73    literalArrayElement -> literal
Rule 74    literalArrayElement -> IDENTIFIER
Rule 75    literalArrayElement -> anyKeyword
Rule 76    literalArrayElement -> anyOperator
Rule 77    literalArrayElement -> LEFT_PARENT literalArrayElements RIGHT_PARENT
Rule 78    anyOperator -> OPERATOR
Rule 79    anyOperator -> BAR
Rule 80    anyOperator -> LESS_THAN
Rule 81    anyOperator -> GREATER_THAN
Rule 82    anyPrefixOperator -> OPERATOR
Rule 83    anyKeyword -> KEYWORD
Rule 84    anyKeyword -> MULTI_KEYWORD

Terminals, with rules where they appear

ASSIGNMENT           : 56
BAR                  : 18 79
BYTE_ARRAY_LEFT_BRACKET : 
CHARACTER            : 64
COLON                : 33
COLON_COLON          : 35 54
COMMA                : 58 60
DICTIONARY_ARRAY_LEFT_CURLY_BRACKET : 
DOT                  : 2
FLOAT                : 62
GREATER_THAN         : 23 24 81
IDENTIFIER           : 5 36 74
INTEGER              : 63
KEYWORD              : 25 42 83
LEFT_BRACKET         : 16
LEFT_CURLY_BRACKET   : 28
LEFT_PARENT          : 8 9 15 32 77
LESS_THAN            : 23 24 80
LITERAL_ARRAY_LEFT_PARENT : 70
MULTI_KEYWORD        : 84
OPERATOR             : 78 82
QUASI_QUOTE          : 12
QUASI_UNQUOTE        : 13 37
QUOTE                : 11
RIGHT_BRACKET        : 16
RIGHT_CURLY_BRACKET  : 28
RIGHT_PARENT         : 8 9 15 32 70 77
SEMICOLON            : 47
SPLICE               : 14
STRING               : 65
SYMBOL_IDENTIFIER    : 66
SYMBOL_KEYWORD       : 67
SYMBOL_OPERATOR      : 68
SYMBOL_STRING        : 69
error                : 

Nonterminals, with rules where they appear

anyKeyword           : 75
anyOperator          : 41 54 76
anyPrefixOperator    : 39
assignmentExpression : 56 57 58
binaryExpression     : 41 42 50
block                : 7 17
blockArgument        : 30
blockArguments       : 18 30
blockClosureHeader   : 19
blockResultType      : 18
chainExpression      : 52 53
chainedMessage       : 46 47
chainedMessageArgument : 43 44
chainedMessageArguments : 44 45
chainedMessages      : 47 49 51
commaExpression      : 61
commaExpressionContent : 58 59 60
expandableIdentifier : 23 33
expression           : 4 9 32
expressionList       : 2 15 16 28 0
literal              : 6 73
literalArrayElement  : 72
literalArrayElements : 70 72 77
lowPrecedenceExpression : 53 55 56
lowPrecedenceOperator : 53
optionalBlockArgumentType : 33
optionalBlockClosureHeader : 28
optionalChainedMessages : 50
optionalExpression   : 1 2
pragma               : 22
pragmaKeywordArgument : 26 27
pragmaKeywordArguments : 24 27
pragmaList           : 22 28
prefixUnaryExpression : 39 40 41
primaryExpression    : 15 16 17 25 35 38
primaryTerm          : 10 11 12 13 14 37

Parsing method: LALR

state 0

    (0) S' -> . expressionList
    (1) expressionList -> . optionalExpression
    (2) expressionList -> . expressionList DOT optionalExpression
    (3) optionalExpression -> .
    (4) optionalExpression -> . expression
    (61) expression -> . commaExpression
    (59) commaExpression -> . commaExpressionContent
    (60) commaExpression -> . commaExpressionContent COMMA
    (57) commaExpressionContent -> . assignmentExpression
    (58) commaExpressionContent -> . commaExpressionContent COMMA assignmentExpression
    (55) assignmentExpression -> . lowPrecedenceExpression
    (56) assignmentExpression -> . lowPrecedenceExpression ASSIGNMENT assignmentExpression
    (52) lowPrecedenceExpression -> . chainExpression
    (53) lowPrecedenceExpression -> . lowPrecedenceExpression lowPrecedenceOperator chainExpression
    (50) chainExpression -> . binaryExpression optionalChainedMessages
    (51) chainExpression -> . chainedMessages
    (40) binaryExpression -> . prefixUnaryExpression
    (41) binaryExpression -> . binaryExpression anyOperator prefixUnaryExpression
    (46) chainedMessages -> . chainedMessage
    (47) chainedMessages -> . chainedMessages SEMICOLON chainedMessage
    (38) prefixUnaryExpression -> . primaryExpression
    (39) prefixUnaryExpression -> . anyPrefixOperator prefixUnaryExpression
    (45) chainedMessage -> . chainedMessageArguments
    (10) primaryExpression -> . primaryTerm
    (11) primaryExpression -> . QUOTE primaryTerm
    (12) primaryExpression -> . QUASI_QUOTE primaryTerm
    (13) primaryExpression -> . QUASI_UNQUOTE primaryTerm
    (14) primaryExpression -> . SPLICE primaryTerm
    (15) primaryExpression -> . primaryExpression LEFT_PARENT expressionList RIGHT_PARENT
    (16) primaryExpression -> . primaryExpression LEFT_BRACKET expressionList RIGHT_BRACKET
    (17) primaryExpression -> . primaryExpression block
    (82) anyPrefixOperator -> . OPERATOR
    (43) chainedMessageArguments -> . chainedMessageArgument
    (44) chainedMessageArguments -> . chainedMessageArguments chainedMessageArgument
    (5) primaryTerm -> . IDENTIFIER
    (6) primaryTerm -> . literal
    (7) primaryTerm -> . block
    (8) primaryTerm -> . LEFT_PARENT RIGHT_PARENT
    (9) primaryTerm -> . LEFT_PARENT expression RIGHT_PARENT
    (42) chainedMessageArgument -> . KEYWORD binaryExpression
    (62) literal -> . FLOAT
    (63) literal -> . INTEGER
    (64) literal -> . CHARACTER
    (65) literal -> . STRING
    (66) literal -> . SYMBOL_IDENTIFIER
    (67) literal -> . SYMBOL_KEYWORD
    (68) literal -> . SYMBOL_OPERATOR
    (69) literal -> . SYMBOL_STRING
    (70) literal -> . LITERAL_ARRAY_LEFT_PARENT literalArrayElements RIGHT_PARENT
    (28) block -> . LEFT_CURLY_BRACKET optionalBlockClosureHeader pragmaList expressionList RIGHT_CURLY_BRACKET

    DOT             reduce using rule 3 (optionalExpression -> .)
    $end            reduce using rule 3 (optionalExpression -> .)
    QUOTE           shift and go to state 17
    QUASI_QUOTE     shift and go to state 18
    QUASI_UNQUOTE   shift and go to state 19
    SPLICE          shift and go to state 20
    OPERATOR        shift and go to state 23
    IDENTIFIER      shift and go to state 25
    LEFT_PARENT     shift and go to state 21
    KEYWORD         shift and go to state 27
    FLOAT           shift and go to state 28
    INTEGER         shift and go to state 29
    CHARACTER       shift and go to state 30
    STRING          shift and go to state 31
    SYMBOL_IDENTIFIER shift and go to state 32
    SYMBOL_KEYWORD  shift and go to state 33
    SYMBOL_OPERATOR shift and go to state 34
    SYMBOL_STRING   shift and go to state 35
    LITERAL_ARRAY_LEFT_PARENT shift and go to state 36
    LEFT_CURLY_BRACKET shift and go to state 37

    expressionList                 shift and go to state 1
    optionalExpression             shift and go to state 2
    expression                     shift and go to state 3
    commaExpression                shift and go to state 4
    commaExpressionContent         shift and go to state 5
    assignmentExpression           shift and go to state 6
    lowPrecedenceExpression        shift and go to state 7
    chainExpression                shift and go to state 8
    binaryExpression               shift and go to state 9
    chainedMessages                shift and go to state 10
    prefixUnaryExpression          shift and go to state 11
    chainedMessage                 shift and go to state 12
    primaryExpression              shift and go to state 13
    anyPrefixOperator              shift and go to state 14
    chainedMessageArguments        shift and go to state 15
    primaryTerm                    shift and go to state 16
    block                          shift and go to state 22
    chainedMessageArgument         shift and go to state 24
    literal                        shift and go to state 26

state 1

    (0) S' -> expressionList .
    (2) expressionList -> expressionList . DOT optionalExpression

    DOT             shift and go to state 38


state 2

    (1) expressionList -> optionalExpression .

    DOT             reduce using rule 1 (expressionList -> optionalExpression .)
    $end            reduce using rule 1 (expressionList -> optionalExpression .)
    RIGHT_PARENT    reduce using rule 1 (expressionList -> optionalExpression .)
    RIGHT_BRACKET   reduce using rule 1 (expressionList -> optionalExpression .)
    RIGHT_CURLY_BRACKET reduce using rule 1 (expressionList -> optionalExpression .)


state 3

    (4) optionalExpression -> expression .

    DOT             reduce using rule 4 (optionalExpression -> expression .)
    $end            reduce using rule 4 (optionalExpression -> expression .)
    RIGHT_PARENT    reduce using rule 4 (optionalExpression -> expression .)
    RIGHT_BRACKET   reduce using rule 4 (optionalExpression -> expression .)
    RIGHT_CURLY_BRACKET reduce using rule 4 (optionalExpression -> expression .)


state 4

    (61) expression -> commaExpression .

    DOT             reduce using rule 61 (expression -> commaExpression .)
    $end            reduce using rule 61 (expression -> commaExpression .)
    RIGHT_PARENT    reduce using rule 61 (expression -> commaExpression .)
    RIGHT_BRACKET   reduce using rule 61 (expression -> commaExpression .)
    RIGHT_CURLY_BRACKET reduce using rule 61 (expression -> commaExpression .)


state 5

    (59) commaExpression -> commaExpressionContent .
    (60) commaExpression -> commaExpressionContent . COMMA
    (58) commaExpressionContent -> commaExpressionContent . COMMA assignmentExpression

    DOT             reduce using rule 59 (commaExpression -> commaExpressionContent .)
    $end            reduce using rule 59 (commaExpression -> commaExpressionContent .)
    RIGHT_PARENT    reduce using rule 59 (commaExpression -> commaExpressionContent .)
    RIGHT_BRACKET   reduce using rule 59 (commaExpression -> commaExpressionContent .)
    RIGHT_CURLY_BRACKET reduce using rule 59 (commaExpression -> commaExpressionContent .)
    COMMA           shift and go to state 39


state 6

    (57) commaExpressionContent -> assignmentExpression .

    COMMA           reduce using rule 57 (commaExpressionContent -> assignmentExpression .)
    DOT             reduce using rule 57 (commaExpressionContent -> assignmentExpression .)
    $end            reduce using rule 57 (commaExpressionContent -> assignmentExpression .)
    RIGHT_PARENT    reduce using rule 57 (commaExpressionContent -> assignmentExpression .)
    RIGHT_BRACKET   reduce using rule 57 (commaExpressionContent -> assignmentExpression .)
    RIGHT_CURLY_BRACKET reduce using rule 57 (commaExpressionContent -> assignmentExpression .)


state 7

    (55) assignmentExpression -> lowPrecedenceExpression .
    (56) assignmentExpression -> lowPrecedenceExpression . ASSIGNMENT assignmentExpression
    (53) lowPrecedenceExpression -> lowPrecedenceExpression . lowPrecedenceOperator chainExpression
    (54) lowPrecedenceOperator -> . COLON_COLON anyOperator

    COMMA           reduce using rule 55 (assignmentExpression -> lowPrecedenceExpression .)
    DOT             reduce using rule 55 (assignmentExpression -> lowPrecedenceExpression .)
    $end            reduce using rule 55 (assignmentExpression -> lowPrecedenceExpression .)
    RIGHT_PARENT    reduce using rule 55 (assignmentExpression -> lowPrecedenceExpression .)
    RIGHT_BRACKET   reduce using rule 55 (assignmentExpression -> lowPrecedenceExpression .)
    RIGHT_CURLY_BRACKET reduce using rule 55 (assignmentExpression -> lowPrecedenceExpression .)
    ASSIGNMENT      shift and go to state 40
    COLON_COLON     shift and go to state 42

    lowPrecedenceOperator          shift and go to state 41

state 8

    (52) lowPrecedenceExpression -> chainExpression .

    ASSIGNMENT      reduce using rule 52 (lowPrecedenceExpression -> chainExpression .)
    COLON_COLON     reduce using rule 52 (lowPrecedenceExpression -> chainExpression .)
    COMMA           reduce using rule 52 (lowPrecedenceExpression -> chainExpression .)
    DOT             reduce using rule 52 (lowPrecedenceExpression -> chainExpression .)
    $end            reduce using rule 52 (lowPrecedenceExpression -> chainExpression .)
    RIGHT_PARENT    reduce using rule 52 (lowPrecedenceExpression -> chainExpression .)
    RIGHT_BRACKET   reduce using rule 52 (lowPrecedenceExpression -> chainExpression .)
    RIGHT_CURLY_BRACKET reduce using rule 52 (lowPrecedenceExpression -> chainExpression .)


state 9
